appId: ${APP_ID}
---
- tapOn:
    id: "shareIconButton"
- assertVisible: ".*Nearby.*"
- assertVisible: ".*Edit.*"
