appId: ${APP_ID}
---
- tapOn:
    id: "shareIconButton"
- assertVisible: ".*Copy.*"
- assertVisible: ".*Print.*"
